--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/ultimate-weather-forecast.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ultimate-weather-forecast.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ultimate Weather Forecast</title>
+    <title>UWF</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
