--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ultimate-weather-forecast.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img/ultimate-weather-forecast.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UWF</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body data-bs-theme="dark">
+    <div id="root" style="background-color: #020024"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
